# robot_blockly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
blockly_msgs/srv/: checkForPause.srv
frontend/: index.html
frontend/pages/: blockly.html  blockly.html.1  blockly.html.2  blockly.html.3  blockly2.html  blockly_template.html  graph.html  screwdriver.html  washer.html  wrench.html  wrench_real.html
frontend/pages/images/: README.md  imageViewer.html
frontend/pages/js/: default_toolbox.js  execution_logic.js  main.js  utils.js
frontend/pages/maps/: imageViewer.html
frontend/pages/screwdriver_files/: blocks_compressed.js  javascript_compressed.js  python_compressed.js
frontend/pages/washer_files/: blocks_compressed.js
frontend/pages/wrench_files/: blockly_compressed.js  blocks_compressed.js  bootstrap.css  javascript_compressed.js  php_compressed.js  python_compressed.js
frontend/pages/wrench_real_files/: blocks_compressed.js  php_compressed.js  python_compressed.js
frontend_graph/: index.html
frontend_graph/assets/css/: main.css
frontend_graph/assets/js/: main.js
graph/: index.html  index2.html  rosnodeinfo.py  rosnodelist.py  rostopiclist.py  server.py
graph/assets/js/: main.js
graph/assets/libs/: glow.js
graph/assets/libs/bootswatch/: .bower.json
graph/js/: graph.js  main.js
graph/server/: image_server.py  rostopicinfo.py  server.py
launch/: robot_blockly.launch  rosimple.launch
scripts/: README.md  blockly_backend.py  build.py  deploy.sh  pywebserver.py  robot_blockly_backend.py  rosimple_backend.py  rostopicinfo.py  server.py  test.py
site/pages/: blockly.html  blocky.html  template.html
srv/: CheckStatus.srv  SetCurrentBlockId.srv
vis/examples/network/labels/: labelAlignment2.html
web/pages/: blockly.html
