<?xml version="1.0"?>
<package>
  <name>ros_rosimple</name>
  <version>0.1.0</version>
  <description>A ROS package that simplifies robot interaction using web interfaces</description>

  <maintainer email="ahcorde@erlerobot.com">Alejandro Hernández Cordero</maintainer>
  <maintainer email="victor@erlerobot.com">Víctor Mayoral Vilches</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ros_erle_pwm</url> -->


  <author email="ahcorde@erlerobot.com">Alejandro Hernández Cordero</author>
  <author email="victor@erlerobot.com">Víctor Mayoral Vilches</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <build_depend>std_msgs</build_depend> 
  <run_depend>std_msgs</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
