<?xml version="1.0"?>
<package>
  <name>robot_blockly</name>
  <version>0.1.0</version>
  <description>A ROS package that simplifies robot interaction using web interfaces</description>

  <maintainer email="ahcorde@erlerobot.com">Alejandro Hernández Cordero</maintainer>
  <maintainer email="victor@erlerobot.com">Víctor Mayoral Vilches</maintainer>

  <license>GPLv3</license>


  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ros_erle_pwm</url> -->


  <author email="ahcorde@erlerobot.com">Alejandro Hernández Cordero</author>
  <author email="victor@erlerobot.com">Víctor Mayoral Vilches</author>

  <build_depend>std_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <buildtool_depend>catkin</buildtool_depend>  
  <buildtool_depend>message_runtime</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
